--- a/file-upload-client/package.json
+++ b/file-upload-client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.5",
+    "antd": "^5.15.4",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
